@@ -14,6 +14,7 @@
  * Released under GNU GPL
  */
 
+#include <sigc++/sigc++.h>
 #include "display/curve.h"
 #include "event-context.h"
 
@@ -65,6 +66,9 @@ struct SPDrawContext {
     SPDrawAnchor *sa;
     /* End anchor */
     SPDrawAnchor *ea;
+
+    SigC::Connection sel_changed_connection;
+    SigC::Connection sel_modified_connection;
 
     NR::Point p[SP_DRAW_POINTS_MAX];
     gint npoints;
